--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prettier": "^1.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
   "lint-staged": {
